--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,16 @@ h1 {
 
 }
 
+.dwarfpic {
+  float: left;
+  width: 9em;
+  height: 9em;
+  position: relative;
+  margin-right: 10px;
+  margin-top: -15px;
+
+}
+
 .instructions {
   
   margin-right: auto;
@@ -41,6 +51,8 @@ h1 {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 14pt;
   margin-bottom: 20px;
+  position: relative;
+  
 
 }
 
